erDiagram
    USERS {
        CHAR(36) id PK
        VARCHAR first_name
        VARCHAR last_name
        VARCHAR email
        VARCHAR password
        BOOLEAN is_admin
        DATETIME created_at
        DATETIME updated_at
    }
    
    PLACES {
        CHAR(36) id PK
        VARCHAR title
        TEXT description
        DECIMAL price
        FLOAT latitude
        FLOAT longitude
        CHAR(36) owner_id FK
        DATETIME created_at
        DATETIME updated_at
    }
    
    REVIEWS {
        CHAR(36) id PK
        TEXT text
        INT rating
        CHAR(36) user_id FK
        CHAR(36) place_id FK
        DATETIME created_at
        DATETIME updated_at
    }
    
    AMENITIES {
        CHAR(36) id PK
        VARCHAR name
        DATETIME created_at
        DATETIME updated_at
    }
    
    PLACE_AMENITY {
        CHAR(36) place_id PK, FK
        CHAR(36) amenity_id PK, FK
    }

    USERS ||--o{ PLACES : "owns"
    USERS ||--o{ REVIEWS : "writes"
    PLACES ||--o{ REVIEWS : "receives"
    PLACES ||--o{ PLACE_AMENITY : "has"
    AMENITIES ||--o{ PLACE_AMENITY : "listed_in"
